# mcp-server-for-atlassian

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_QUICK_START.md  Dockerfile  LICENSE  README.md  development_plan.md  docker-compose.yml  pyproject.toml  requirement_definition.md  setup.py
docs/: api.md  docker.md  examples.md  troubleshooting.md
references/: atlassian_oauth2.md  confluence_rest_api.md  cql.md  fastmcp.md
scripts/: verify_connection.py
src/: __init__.py  config.py  exceptions.py  main.py
src/auth/: __init__.py  api_token.py  base.py  oauth2.py
src/confluence/: __init__.py  client.py  converters.py  models.py
src/tools/: __init__.py  children.py  content.py  search.py  types.py
tests/: __init__.py  test_config.py  test_config_edge_cases.py  test_exceptions.py  test_integration.py
tests/test_auth/: __init__.py  test_api_token.py  test_api_token_edge_cases.py
tests/test_confluence/: __init__.py  test_client.py  test_client_edge_cases.py  test_converters.py  test_converters_edge_cases.py  test_models.py
tests/test_tools/: __init__.py  test_children.py  test_content.py  test_search.py
